[metadata]
name = envault
version = 0.1.0
description = Lightweight utility to manage and encrypt per-project .env files with team-sharing support via GPG keys.
long_description = file: README.md
long_description_content_type = text/markdown
author = envault contributors
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
packages = envault
python_requires = >=3.8
install_requires =
    click>=8.0

[options.entry_points]
console_scripts =
    envault = envault.cli:cli

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv
